# worker-process-service-challenge

./: Cargo.toml  README.md  rust-toolchain
.github/workflows/: ci.yml
client/: Cargo.toml
client/src/: cli.rs  client.rs  main.rs
client/src/tests/: authorization.rs  functionality.rs  mod.rs  tls.rs
data/: 01.pem  02.pem  ca.conf  ca.crt  ca.key  ca.srl  client.csr  client.key  client.pem  client_ca.csr  client_ca.key  client_ca.pem  client_csr.conf  index.txt  index.txt.old  server.csr  server.key  server.pem  server_ca.csr  server_ca.key  server_ca.pem  server_csr.conf
engine/: Cargo.toml
engine/src/: lib.rs  output.rs  remote.rs
protocol/: Cargo.toml  api.proto  build.rs
server/: Cargo.toml
server/src/: auth.rs  main.rs  tls.rs
server/src/api/: mod.rs
server/src/api/routes/: issue_jwt.rs  mod.rs  spawn.rs  status.rs  stop.rs  stream_log.rs
server/src/server/: auth.rs  mod.rs  tls.rs
server/src/server/api/: mod.rs
server/src/server/api/routes/: issue_jwt.rs  status.rs  stream_log.rs
