[package]
name = "server"
version = "0.1.0"
authors = ["Acrimon <joel.wejdenstal@gmail.com>"]
edition = "2018"

[dependencies]
engine = { path = "../engine" }
tonic = { version = "0.3.1", features = ["tls"] }
protocol = { path = "../protocol" }
futures = "0.3.8"
tokio = { version = "0.2", features = ["full"] }
uuid = { version = "0.8.1", features = ["v4"] }
anyhow = "1.0.37"
jsonwebtoken = "7.2.0"
serde = {version = "1.0", features = ["derive"] }
