[package]
name = "server"
version = "0.1.0"
authors = ["Acrimon <joel.wejdenstal@gmail.com>"]
edition = "2018"

[dependencies]
engine = { path = "../engine" }
tonic = { version = "0.4.0", features = ["tls"] }
protocol = { path = "../protocol" }
futures = "0.3.12"
tokio = { version = "1.0.2", features = ["full"] }
uuid = { version = "0.8.2", features = ["v4"] }
anyhow = "1.0.38"
jsonwebtoken = "7.2.0"
serde = { version = "1.0.119", features = ["derive"] }
rustls = "0.19.0"
